Changes
=======


1.4 - unreleased
----------------

* Added a property in site_properties to define custom separators.
  "," is set as a custom separator by default. ";" is always a separator.
  [thomasdesvenain]

* Fixed: was unusable out of the box with default sunburst theme.
  [thomasdesvenain]

* Consider, by default, lines fields as multiValued fields.
  [thomasdesvenain]

* Merged from trunk, keeping fixes and features
  [Quadra Informatique - jriboux]


From 1.0 original trunk
-----------------------

* Fixed safari keyboard issues. Added single select option
  [dannyb]

* Updated to use a GenericSetup profile for installation
  [wichert]

* Change the templates to use a div based dropdown, giving a sane
  scrolling experience.
  [dannyb]


1.3 (15-03-2010)
----------------

* Added possibility to hide the clear button

* Corrected a bug showing () when the multivalued field was empty

* Added compatibility with reference fields

* generalized a few checks to make compatible with ReferenceFields (davisagli)

* inline the filter function and uses scopes instead of method calling.
  the vocab for field was being called for each term stored in the field
  keyword_from_value method should go away.  It's no longer being used.
  also general white space cleanups. (runyaga)

* tabindex is not available for archetypes widgets anymore and broke
  edit views in plone4 -
  fixes http://plone.org/products/autocompletewidget/issues/5
  (fRiSI)

* eggified product (fRiSi)

  - history.txt and HISTORY.txt merged to CHANGES.txt
  - added issue #3 (merging with trunk) to todo.txt
  - removed refres.txt since it's no longer supported

* made widget work with vocabularies containing non-ascii characters too
  (fRiSi)


2008-03-14 - v1.2.1 : Quadra Informatique - Jonathan Riboux

   * integrated Ak Sorpa's fix to prevent &amp;, &lt; and &gt; to appear in the input box after selecting a value in the drop-down list


2008-03-12 - v1.2 : Quadra Informatique - Jonathan Riboux
